src/components/station-card/station-card.scss
station-card {
    display: block;
    font-size: 16px;
    background-color: #fff;
    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.24), 0 0 2px 0 rgba(0, 0, 0, 0.12);

    .content-loader,
    .content-offline {
        position: absolute;
        top: 0;
        bottom: 0;
        left: 0;
        right: 0;
    }

    .grid {
        height: 100%;
    }

    .border-right {
        border-right: solid 1px rgba(0, 0, 0, 0.12);
    }
}

.station-card--header {
    background-color: $white;

    .station-name,
    .station-distance {
        display: inline-block;
        vertical-align: bottom;
        line-height: 1.3;
    }

    .station-name {
        padding: 0 8px;
        color: $black-87;
        font-size: 1.8rem;
        white-space: nowrap;
        overflow: hidden;
        text-overflow: ellipsis;
    }

    .station-distance {
        color: color($colors, secondary, base);
        font-size: 1.6rem;
    }
}

.station-card--content,
.station-card--dead {
    flex-grow: 1;
}

.station-card--dead {
    color: $black-54;
    font-size: 1.4rem;
    text-align: center;
    white-space: normal;
}

.station-card--footer {
    color: $black-54;
    background: $white;
    font-size: 0.8rem;
    line-height: 1;
    text-align: center;
    padding: 8px;
}

